<resources>
    <string name="app_name">MyPokedex</string>
    <string name="hint_pokemon_search">Search Pokemon…</string>
    <string name="description_profile_button">Profile Button</string>
    <string name="description_camera_button">Camera button</string>
    <string name="description_save_button">Save Button</string>
    <string name="description_folder_button">Folder button</string>
    <string name="description_location_image">Pokemon Location Image</string>
    <string name="hint_pokemon_description">Enter description…</string>
    <string name="label_pokemon_description">Pokemon Description</string>
    <string name="label_pokemon_name">Pokemon Name</string>
    <string name="label_pokemon_type">Pokemon Type</string>
    <string name="hint_pokemon_name">Enter name…</string>
    <string name="hint_pokemon_type">Enter type…</string>
    <string name="label_pokemon_sightings">Pokemon Sighting Locations</string>
    <string name="recycler_image">Image of Location</string>
    <string name="recycler_image_pokemon">Pokemon Image</string>
    <string name="btn_Gallery">Gallery</string>
    <string name="gallery_description">Opens Gallery</string>
    <string name="pokemon_Name">Name:</string>
    <string name="pokemon_Height">Height:</string>
    <string name="lbl_weight">Weight:</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="pokemon_id">Pokemon ID:</string>
    <string name="pokemon_num">Pokemon Number:</string>
    <string name="pokemon_type">Pokemon Type:</string>
    <string name="candy">Candy:</string>
    <string name="egg">Egg:</string>
    <string name="spawn_choice">Spawn Choice:</string>
    <string name="avg_spawns">Average Spawns:</string>
    <string name="spawn_time">Spawn Time:</string>
    <string name="weakness">Weakness:</string>
    <string name="prev_evolution">Previous Evolution:</string>
    <string name="select_pokemon">Select Pokemon</string>
</resources>
