<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FC3F7"
    android:contentDescription="@string/gallery_description"
    tools:context=".ProfileScreenActivity">

    <TextView
        android:id="@+id/txtViewPokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_pokemon_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewPokemonDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_pokemon_description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPokemonType" />

    <TextView
        android:id="@+id/txtViewPokemonType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_pokemon_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtViewPokemonName"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPokemonName" />

    <EditText
        android:id="@+id/edtTxtPokemonDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/hint_pokemon_description"
        android:ems="10"
        android:hint="@string/hint_pokemon_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPokemonDescription" />

    <EditText
        android:id="@+id/edtTextPokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/hint_pokemon_name"
        android:ems="10"
        android:hint="@string/hint_pokemon_name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewPokemonName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTextPokemonType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/hint_pokemon_type"
        android:ems="10"
        android:hint="@string/hint_pokemon_type"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewPokemonType"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPokemonName" />

    <ImageView
        android:id="@+id/imgPokemonLocation"
        android:layout_width="261dp"
        android:layout_height="274dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_location_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtPokemonDescription"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPokemonLocation">

        <ImageButton
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/description_camera_button"
            android:src="@drawable/ic_camera_button" />

        <ImageButton
            android:id="@+id/imgBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/description_save_button"
            android:src="@drawable/ic_save_button" />

        <ImageButton
            android:id="@+id/imgBtnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/gallery_description"
            app:srcCompat="@drawable/ic_gallery"
            tools:srcCompat="@drawable/ic_gallery" />

        <ImageButton
            android:id="@+id/imgBtnFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/description_folder_button"
            android:src="@drawable/ic_folder_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>